@@ -7,8 +7,11 @@ apport (0.107) UNRELEASED; urgency=low
     not seem to have a way to tag a file as "language python", so add an ugly
     workaround: Create temporary .py symlinks for gtk/apport-gtk & friends,
     and have intltool extract them.
+  * apport/ui.py: Disallow filing a bug without specifying a package or a PID.
+    Update debian/local/ubuntu-bug.1 accordingly (apport-cli manpage was
+    already correct). (LP: #210348)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 03 Apr 2008 12:59:32 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 06 Apr 2008 11:44:38 -0600
 
 apport (0.106) hardy; urgency=low
 
